[project]
name = "testbdlmrepo"
version = "0.1.0"
description = "Test Porject"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I) rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Set the maximum line length
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
# Use known-first-party imports
known-first-party = ["src"]